Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(Integer var)
    end
end
